SRM | Success page title wrap fixed

--- a/src/Components/Dashboard/CreateNFT/createNft.module.scss
+++ b/src/Components/Dashboard/CreateNFT/createNft.module.scss
@@ -284,6 +284,7 @@
         text-align: center;
         font-weight: 500;
         font-size: 24px;
+        word-break: break-word;
       }
       h6 {
         font-size: 16.8px;
